Pic64GX: correct model and compatible properties in DT
The device-tree passed by HSS to U-Boot should use the same model and
compatible strings as Linux.

Signed-off-by: Heinrich Schuchardt <heinrich.schuchardt@canonical.com>

--- a/boards/pic64gx-curiosity-kit/pic64gx_minimal_uboot.dts
+++ b/boards/pic64gx-curiosity-kit/pic64gx_minimal_uboot.dts
@@ -3,8 +3,8 @@
 / {
 	#address-cells = <2>;
 	#size-cells = <2>;
-	model = "Microchip PolarFire-SoC Icicle Kit";
-	compatible = "microchip,mpfs-icicle-reference-rtlv2210", "microchip,mpfs-icicle-kit", "microchip,mpfs";
+	model = "Microchip Pic64GX Curiosity Kit";
+	compatible = "microchip,pic64gx-curiosity-kit", "microchip,pic64gx";
 
 	cpus {
 		#address-cells = <1>;
