fix(SDcard): correct I/O configuration for SDCard
Ensure that we are usign correct I/O configuration for
SDCard, and limit to 3.3V operation.

--- a/boards/pic64gx-curiosity-kit/pic64gx_minimal_uboot.dts
+++ b/boards/pic64gx-curiosity-kit/pic64gx_minimal_uboot.dts
@@ -79,12 +79,8 @@
 			disable-wp;
 			cap-sd-highspeed;
 			cap-mmc-highspeed;
-			mmc-ddr-1_8v;
-			mmc-hs200-1_8v;
-			sd-uhs-sdr12;
-			sd-uhs-sdr25;
-			sd-uhs-sdr50;
-			sd-uhs-sdr104;
+			sdhci-caps-mask = <0x7 0x0>;
+			no-1-8-v;
 		};
 
 		uart1: serial@20100000 {
